--- a/.jshintrc
+++ b/.jshintrc
@@ -1,1 +1,1 @@
-/*jshint camelcase: true, curly: true, eqeqeq: true, immed: true, indent: 4, noarg: true, noempty: true, regexp: true, unused: "paramsignore", trailing: true, latedef: true */
+/*jshint camelcase: true, curly: true, eqeqeq: true, immed: true, indent: 4, noarg: true, noempty: true, regexp: true, unused: true, trailing: true, latedef: true, es5: true */
